# projeto-etl-duckdb-02

./: README.md  app.py  duckdb.db  pipeline_00.py  pyproject.toml
